[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/Guard.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Animatronic.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Maps/fnafsl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/light.png" type="Texture" id=4]
[ext_resource path="res://scenes/aud_vis/AudioStreamPlayer2D.gd" type="Script" id=5]
[ext_resource path="res://scripts/Misc/map3.gd" type="Script" id=6]
[ext_resource path="res://scenes/JUMPSCARE.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/Music/noch-neskolko-sverchkov-34043.ogg" type="AudioStream" id=8]
[ext_resource path="res://audio/Music/The forbidden Nocturne_2.mp3" type="AudioStream" id=9]
[ext_resource path="res://scenes/console.tscn" type="PackedScene" id=10]
[ext_resource path="res://shaders/vignette.tres" type="Material" id=11]
[ext_resource path="res://scenes/Lose_Screen.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Misc/Countdown.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sprites/character_editor/abilities/wings.png" type="Texture" id=14]

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.08 ]
}

[sub_resource type="Animation" id=16]
resource_name = "light"
length = 1.396
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.025 ),
"transitions": PoolRealArray( 1, 1, 26.9087, 0.129408 ),
"update": 0,
"values": [ 1.08, 1.08, 1.08, 0.06 ]
}

[sub_resource type="RectangleShape2D" id=22]

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 6, 1.25 )

[sub_resource type="Environment" id=8]
background_mode = 4
glow_intensity = 1.56
glow_strength = 1.54
glow_bloom = 0.04
glow_hdr_scale = 1.77
adjustment_enabled = true

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:environment:adjustment_brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "fade"
length = 3.813
tracks/0/type = "value"
tracks/0/path = NodePath(".:environment:adjustment_brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.01, 1.0 ]
}

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 77, 2.875 )

[node name="Map3" type="Node2D"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = ExtResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="JUMPSCARE" parent="." instance=ExtResource( 7 )]
layer = 5

[node name="Lose_Screen" parent="." instance=ExtResource( 12 )]
layer = 6

[node name="Countdown" parent="." instance=ExtResource( 13 )]

[node name="Ambient" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( 2329, -2356 )
stream = ExtResource( 8 )
volume_db = 0.015
autoplay = true
max_distance = 2356.0
attenuation = 0.116629
area_mask = 2
script = ExtResource( 5 )

[node name="Ambient2" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( 982, 721 )
stream = ExtResource( 9 )
volume_db = 0.015
autoplay = true
max_distance = 1213.0
attenuation = 0.112656
area_mask = 2
script = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 801, 1337 )
scale = Vector2( 0.331408, 0.311758 )
texture = ExtResource( 4 )
texture_scale = 1.29
color = Color( 1, 0.74902, 0.74902, 1 )
energy = 1.08
range_height = -3.1
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 1

[node name="Light2D3" type="Light2D" parent="."]
position = Vector2( 250, 877 )
scale = Vector2( 0.331408, 0.311758 )
texture = ExtResource( 4 )
texture_scale = 1.29
color = Color( 1, 0.74902, 0.74902, 1 )
energy = 1.08
range_height = -3.1
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 1

[node name="Light2D5" type="Light2D" parent="."]
position = Vector2( 414, -935 )
scale = Vector2( 0.331408, 0.311758 )
texture = ExtResource( 4 )
texture_scale = 1.29
color = Color( 1, 0.74902, 0.74902, 1 )
energy = 1.08
range_height = -3.1
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 1

[node name="Light2D6" type="Light2D" parent="."]
position = Vector2( 1133, -934 )
scale = Vector2( 0.331408, 0.311758 )
texture = ExtResource( 4 )
texture_scale = 1.29
color = Color( 1, 0.74902, 0.74902, 1 )
energy = 1.08
range_height = -3.1
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 1

[node name="Light2D4" type="Light2D" parent="."]
position = Vector2( 1389, 898 )
scale = Vector2( 0.331408, 0.311758 )
texture = ExtResource( 4 )
texture_scale = 1.29
color = Color( 0.74902, 0.796078, 1, 1 )
energy = 1.08
range_height = -3.1
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 1

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 1033, 288 )
scale = Vector2( 0.585853, 0.553317 )
texture = ExtResource( 4 )
texture_scale = 0.43
color = Color( 0.698039, 0.521569, 0.521569, 1 )
energy = 1.08
range_height = -3.1
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Light2D2"]
autoplay = "light"
anims/RESET = SubResource( 15 )
anims/light = SubResource( 16 )

[node name="Guard" parent="." instance=ExtResource( 1 )]
position = Vector2( 792, 1342 )
scale = Vector2( 2, 2 )
z_index = 1

[node name="Area2D" type="Area2D" parent="Guard"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guard/Area2D"]
shape = SubResource( 22 )

[node name="Animatronic" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 488, -903 )
z_index = 2

[node name="custom" parent="Animatronic" index="0"]
extra_ability = 2
color_hat = Color( 4.87, 1.54454, 0, 1 )
color_eyes = Color( 1, 1, 1, 0.909804 )
color_eyes2 = Color( 0.0461269, 0.00262951, 0.124003, 0.878431 )
color_head = Color( 0.358378, 0, 1, 0.984314 )
color_body = Color( 0.364362, 0, 1, 0.984314 )
color_legs = Color( 0.350399, 0, 1, 0.984314 )

[node name="Legs" parent="Animatronic" index="3"]
modulate = Color( 0.350399, 0, 1, 0.984314 )

[node name="Bodys" parent="Animatronic" index="4"]
modulate = Color( 0.364362, 0, 1, 0.984314 )

[node name="Heads" parent="Animatronic" index="5"]
modulate = Color( 0.358378, 0, 1, 0.984314 )

[node name="Hats" parent="Animatronic" index="6"]
modulate = Color( 4.87, 1.54454, 0, 1 )

[node name="2" parent="Animatronic/Eyes" index="2"]
modulate = Color( 0.0461269, 0.00262951, 0.124003, 0.878431 )

[node name="1" parent="Animatronic/Eyes" index="3"]
modulate = Color( 1, 1, 1, 0.909804 )

[node name="AnimationTree" parent="Animatronic" index="11"]
parameters/playback = SubResource( 21 )

[node name="Icon2" parent="Animatronic/HUD/Abilities" index="2"]
texture = ExtResource( 14 )

[node name="Camera2D2" type="Camera2D" parent="Animatronic"]
position = Vector2( 458.342, 336.419 )
smoothing_enabled = true
smoothing_speed = 7.0

[node name="Light2D3" type="Light2D" parent="Animatronic"]
position = Vector2( 1, 2 )
scale = Vector2( 0.0590223, 0.0516962 )
texture = ExtResource( 4 )
texture_scale = 1.88
color = Color( 0.839216, 0.796078, 1, 1 )
energy = 1.08
range_height = -3.1
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 1

[node name="Light2D4" type="Light2D" parent="Animatronic"]
position = Vector2( 1, 2 )
scale = Vector2( 0.0590223, 0.0516962 )
texture = ExtResource( 4 )
texture_scale = 2.41
color = Color( 0.839216, 0.796078, 1, 1 )
energy = 0.54
range_height = -3.1
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 1

[node name="Area2D" type="Area2D" parent="Animatronic"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Animatronic/Area2D"]
position = Vector2( 1, 13.75 )
shape = SubResource( 17 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="WorldEnvironment"]
autoplay = "fade"
anims/RESET = SubResource( 18 )
anims/fade = SubResource( 19 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.101961, 0.0823529, 0.372549, 1 )

[node name="Level" parent="." instance=ExtResource( 3 )]
position = Vector2( 142, 154 )

[node name="Console" parent="." instance=ExtResource( 10 )]

[node name="in_pizzera" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="in_pizzera"]
position = Vector2( 766, -349.125 )
shape = SubResource( 20 )
one_way_collision = true

[node name="in_surface" type="Area2D" parent="."]
position = Vector2( 1, -36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="in_surface"]
position = Vector2( 766, -349.125 )
shape = SubResource( 20 )
one_way_collision = true

[node name="Spawnpoint" type="Position2D" parent="."]
position = Vector2( 775, 391 )
scale = Vector2( 2, 1 )
z_index = 10

[connection signal="area_entered" from="Guard/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Animatronic/Wing/Halloween/Area2D" to="Guard" method="_on_Halloween_area_entered"]
[connection signal="area_entered" from="in_pizzera" to="." method="_on_in_pizzera_area_entered"]
[connection signal="area_entered" from="in_surface" to="." method="_on_in_surface_area_entered"]

[editable path="Animatronic"]
